--- a/src/main/webapp/relatorios/avaliacao/avaliacao_identificacao_programa.jrxml
+++ b/src/main/webapp/relatorios/avaliacao/avaliacao_identificacao_programa.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="avaliacao_identificacao_programa" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="4932b5a5-2caa-4803-935a-28578d7dfc4c">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="avaliacao_identificacao_programa" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isIgnorePagination="true" uuid="4932b5a5-2caa-4803-935a-28578d7dfc4c">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<parameter name="param_cod_prog" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="param_prog" class="java.lang.String" isForPrompting="false">
@@ -55,7 +55,7 @@
 		<band height="127" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
 				<reportElement key="" positionType="Float" mode="Opaque" x="-20" y="17" width="802" height="14" backcolor="#C8C8C8" uuid="f088cf57-ecea-449d-a0f1-1c891b5123a4"/>
-				<textElement verticalAlignment="Middle" markup="styled">
+				<textElement verticalAlignment="Middle" markup="none">
 					<font fontName="SansSerif" size="8" pdfFontName="Helvetica-Bold"/>
 					<paragraph leftIndent="5" spacingBefore="1" spacingAfter="1"/>
 				</textElement>
@@ -83,9 +83,9 @@
 					<font fontName="SansSerif" size="8"/>
 					<paragraph leftIndent="5" spacingBefore="2" spacingAfter="2"/>
 				</textElement>
-				<textFieldExpression><![CDATA["<b>Dotação Orçamentária (R$ 1,00)  Inicial:</b> "+ (new DecimalFormat("#,###,##0.00")).format($P{param_dot_inicial})+
-"      <b>Atual: </b>"+(new DecimalFormat("#,###,##0.00")).format($P{param_dot_atual})+
-"      <b> Variação(%):</b> "+(new DecimalFormat("#,###,##0.00")).format($P{param_variacao})]]></textFieldExpression>
+				<textFieldExpression><![CDATA["<b>Dotação Orçamentária (R$ 1,00)  Inicial:</b> "+ $P{param_dot_inicial}+
+"      <b>Atual: </b>"+$P{param_dot_atual}+
+"      <b> Variação(%):</b> "+$P{param_variacao}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement mode="Opaque" x="-20" y="-3" width="802" height="20" forecolor="#FEFEFE" backcolor="#465A7F" uuid="56fd9096-2a96-4cc1-8e91-814adcf6d7a8"/>
@@ -116,7 +116,7 @@
 	<summary>
 		<band height="25">
 			<subreport runToBottom="true" overflowType="Stretch">
-				<reportElement positionType="Float" isPrintRepeatedValues="false" x="-20" y="0" width="802" height="22" isRemoveLineWhenBlank="true" uuid="77afe421-90b3-4014-9393-90056e1c063a"/>
+				<reportElement positionType="Float" isPrintRepeatedValues="false" x="-21" y="0" width="802" height="22" isRemoveLineWhenBlank="true" uuid="77afe421-90b3-4014-9393-90056e1c063a"/>
 				<subreportParameter name="param_cod_prog">
 					<subreportParameterExpression><![CDATA[$P{param_cod_prog}]]></subreportParameterExpression>
 				</subreportParameter>
