--- a/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_diretriz_associada.jrxml
+++ b/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_diretriz_associada.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_identificacao_programa" printOrder="Horizontal" pageWidth="842" pageHeight="150" orientation="Landscape" whenNoDataType="NoDataSection" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="0" bottomMargin="0" isFloatColumnFooter="true" isIgnorePagination="true" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_identificacao_programa" printOrder="Horizontal" pageWidth="842" pageHeight="150" orientation="Landscape" whenNoDataType="NoDataSection" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="0" bottomMargin="0" isIgnorePagination="true" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
 	<property name="ireport.zoom" value="1.771561000000001"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -97,7 +97,7 @@
 	<summary>
 		<band height="37">
 			<subreport runToBottom="true" overflowType="Stretch">
-				<reportElement positionType="Float" isPrintRepeatedValues="false" x="0" y="9" width="802" height="22" isRemoveLineWhenBlank="true" uuid="2c17a6ab-a133-4a2f-989a-679e6b26c6a2"/>
+				<reportElement positionType="Float" isPrintRepeatedValues="false" x="0" y="13" width="802" height="22" isRemoveLineWhenBlank="true" uuid="2c17a6ab-a133-4a2f-989a-679e6b26c6a2"/>
 				<subreportParameter name="param_id_prog">
 					<subreportParameterExpression><![CDATA[$P{param_id_prog}]]></subreportParameterExpression>
 				</subreportParameter>
@@ -199,7 +199,7 @@
 	<noData>
 		<band height="84" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" mode="Transparent" x="0" y="34" width="802" height="17" forecolor="#000000" backcolor="#FEFEFE" uuid="d1b68db6-24e2-4f7d-b320-d4aeb76fe664"/>
+				<reportElement positionType="Float" mode="Transparent" x="0" y="34" width="802" height="17" forecolor="#000000" backcolor="#FEFEFE" uuid="d1b68db6-24e2-4f7d-b320-d4aeb76fe664"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
 					<font size="8"/>
 					<paragraph leftIndent="5" spacingBefore="2" spacingAfter="2"/>
